<resources>
    <string name="app_name">ASAH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="or_you_don_t_have_an_account">or you don\'t have an account</string>
    <string name="login_decoration">login decoration</string>
    <string name="register_decoration">register decoration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_have_an_account">or have an account</string>
    <string name="thumbail_blog">thumbail blog</string>
    <string name="blog">Blog</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="reminder">Reminder</string>
    <string name="jam">Jam</string>
    <string name="ulang_setiap">Ulang Setiap</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="set_pengingat">Set Pengingat</string>
    <string name="result">Result</string>
    <string name="history">History</string>
    <string name="reward">Tukar Point</string>
    <string name="scan">Scan Sampah</string>
    <string name="camera">Kamera</string>
    <string name="galery">Galeri</string>
    <string name="cek_sampah">Cek Jenis Sampah</string>
    <string name="scan_sampah_image">Scan sampah image</string>
    <string name="buang_sampah">Buang Sampah</string>
    <string name="cek_lokasi_tpa_terdekat">Cek Lokasi TPA Terdekat</string>
    <string name="cancel_pengingat">Cancel Pengingat</string>
    <string name="allow_notification">Jangan lupa untuk mengaktifkan izin notifikasi untuk aplikasi ini!</string>
    <string name="click_allow">klik disini untuk mengaktifkan</string>
    <string name="result_image">result image</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="not_found_blog">Masih belum ada berita menarik buat kamu nih</string>
    <string name="by">oleh :</string>
    <string name="image_profile">Image Profile</string>
    <string name="our_team">Our Team</string>
    <string name="nama1">Muhammad Fikri Raihan A.</string>
    <string name="nama2">Zikri Kholifah Nur</string>
    <string name="nama3">Ridwan Ridlo Nugroho</string>
    <string name="nama4">Irzan Luthfi Al Khalid</string>
    <string name="nama5">Edwin Mahendra</string>
    <string name="nama6">Johannes Baptista A. P.</string>
    <string name="desc1">Telkom University\nCloud Computing - C360DSX3486</string>
    <string name="desc2">Telkom University\nCloud Computing - C360DSX0876</string>
    <string name="desc3">Universitas Negeri Semarang\nMobile Development - A286DSX0989</string>
    <string name="desc4">Universitas Negeri Semarang\nMobile Development - A286DSX3839</string>
    <string name="desc5">Universitas Kristen Duta Wacana\nMachine Learning - M222DSX0118</string>
    <string name="desc6">Universitas Kristen Duta Wacana\nMachine Learning - M222DSX1529</string>
    <string name="tukar_point">Tukar Point</string>
    <string name="ingat_buang_sampah">Ingat Buang Sampah</string>
    <string name="blocker">Blocker</string>
    <string name="not_found_location">Sepertinya masih belum ada tempat pembuangan sampah di dekat lokasimu nih</string>
    <string name="about_description">ASAH is an application to encourage people to manage their waste properly by giving them rewards if they successfully manage their waste properly, where they need to sort their waste first and then they can dispose of or give their waste to recycling agencies around them</string>
    <string name="log_out">Log Out</string>
    <string name="kamu_belum_pernah_scan_sampah_nih">Kamu belum pernah scan sampah nih !</string>
    <string name="peringatan">Peringatan</string>
    <string name="peringatan_deskripsi">Fitur ini masih berupa prototype, menukar akan mengurangi point anda, tetapi anda belum akan mendapatkan apapun !</string>
    <string name="rewardTitle1">Voucher Tokopedia</string>
    <string name="_500_point">500 Point</string>
    <string name="rewardDesc1">Voucher Toko adalah fitur yang memungkinkan Penjual untuk melakukan kegiatan promo penjualan secara terbatas yang dilakukan melalui Situs/Aplikasi.</string>
    <string name="rewardTitle2">Voucher Pulsa 50k</string>
    <string name="_1000_point">1000 Point</string>
    <string name="rewardDesc2">Voucher pulsa telkomsel sebesar 50K yang bisa langsung ditukarkan menggunakan kode voucher yang didapatkan dari penukaran item ini.</string>
    <string name="rewardTitle3">Voucher Game Online</string>
</resources>