<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reminder.ReminderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="900dp"
        android:padding="24dp">

        <TextView
            android:id="@+id/header"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/allow_notification_card"
            style="@style/WarningCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/clock_button"
            app:layout_constraintEnd_toEndOf="@id/repeat_group"
            app:layout_constraintStart_toStartOf="@id/repeat_group"
            app:layout_constraintTop_toBottomOf="@id/header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/allow_notification"
                    android:textAlignment="center"
                    android:textColor="@color/text_warning" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/click_allow"
                    android:textAlignment="center"
                    android:textColor="@color/text_warning"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clock_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="?attr/colorSecondary"
            app:icon="@drawable/baseline_watch_later_24"
            app:iconSize="100dp"
            app:layout_constraintBottom_toTopOf="@+id/jam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allow_notification_card" />

        <TextView
            android:id="@+id/jam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/jam"
            app:layout_constraintBottom_toTopOf="@+id/header_repeat"
            app:layout_constraintEnd_toEndOf="@id/clock_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/clock_button"
            app:layout_constraintTop_toBottomOf="@+id/clock_button" />

        <TextView
            android:id="@+id/header_repeat"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ulang_setiap"
            app:layout_constraintBottom_toTopOf="@+id/repeat_group"
            app:layout_constraintStart_toStartOf="@id/header"
            app:layout_constraintTop_toBottomOf="@+id/jam" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/repeat_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/reminder_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_repeat"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hari_1"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hari_3"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hari_5"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hari_7"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reminder_button"
            style="@style/SecondaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/set_pengingat"
            app:layout_constraintBottom_toTopOf="@id/cancel_alarm"
            app:layout_constraintEnd_toEndOf="@id/repeat_group"
            app:layout_constraintStart_toStartOf="@id/repeat_group" />

        <Button
            android:id="@+id/cancel_alarm"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel_pengingat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/repeat_group"
            app:layout_constraintStart_toStartOf="@id/repeat_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>