<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".ui.about.AboutFragment">

        <TextView
            android:id="@+id/header"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_description"
            style="@style/TextDescription"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginTop="16dp"
            android:text="@string/about_ASAH"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <TextView
            android:id="@+id/our_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/our_team"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_description" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/our_profile_image1"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/our_team" />

        <TextView
            android:id="@+id/our_profile_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/nama1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image1"
            app:layout_constraintTop_toBottomOf="@+id/our_team" />

        <TextView
            android:id="@+id/our_profile_description1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/desc1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image1"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_name1" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/our_profile_image2"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_image1" />

        <TextView
            android:id="@+id/our_profile_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/nama2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image2"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_description1" />

        <TextView
            android:id="@+id/our_profile_description2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/desc2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image2"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_name2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/our_profile_image3"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_image2" />

        <TextView
            android:id="@+id/our_profile_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/nama3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image3"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_description2" />

        <TextView
            android:id="@+id/our_profile_description3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/desc3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image3"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_name3" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/our_profile_image4"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_image3" />

        <TextView
            android:id="@+id/our_profile_name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/nama4"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image4"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_description3" />

        <TextView
            android:id="@+id/our_profile_description4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/desc4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image4"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_name4" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/our_profile_image5"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_image4" />

        <TextView
            android:id="@+id/our_profile_name5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/nama5"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image5"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_description4" />

        <TextView
            android:id="@+id/our_profile_description5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/desc5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image5"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_name5" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/our_profile_image6"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_image5" />

        <TextView
            android:id="@+id/our_profile_name6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/nama6"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image6"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_description5" />

        <TextView
            android:id="@+id/our_profile_description6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/desc6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toEndOf="@+id/our_profile_image6"
            app:layout_constraintTop_toBottomOf="@+id/our_profile_name6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>